# context-dependent-processing

./: Fig_2_5_S3_S4_S7_S8_S13_S14_S15.ipynb  Fig_3A_3B_S5_S6.ipynb  Fig_3C_S9_S10_S11_S17_S18.ipynb  Fig_4A.ipynb  Fig_4B.ipynb  Fig_S16.ipynb  Fig_S1_S2_S12.ipynb  LICENSE
optimization_code/spatialrnn/: LICENSE  MANIFEST.in  README.md  asv.conf.json  pyproject.toml  requirements.txt  tox.ini
optimization_code/spatialrnn/benchmarks/: README.md  numerics.py  resolvent.py  v1.py
optimization_code/spatialrnn/examples/: README.md
optimization_code/spatialrnn/src/niarb/: __init__.py  __main__.py  cell_type.py  dataframe.py  dataset.py  distributions.py  exceptions.py  integrate.py  io.py  linalg.py  main.py  neurons.py  numerics.py  parsing.py  perturbation.py  random.py  spatial.py  utils.py  visual_stim.py  viz.py  weights.py
optimization_code/spatialrnn/src/niarb/cli/: fit.py  (+2 more)
optimization_code/spatialrnn/test/: conftest.py  test_dataframe.py  test_dataset.py  test_distributions.py  test_io.py  test_linalg.py  test_neurons.py  test_numerics.py  test_parsing.py  test_perturbation.py  test_random.py  test_spatial.py  test_utils.py  test_viz.py  test_weights.py
optimization_code/spatialrnn/test/test_ft/: test_torus.py
optimization_code/spatialrnn/test/test_nn/: test_parameter.py
optimization_code/spatialrnn/test/test_optimize/: test_elementwise.py
optimization_code/spatialrnn/test/test_special/: test_core.py  test_resolvent.py
optimization_code/spatialrnn/test/test_tensors/: test_base_circulant.py  test_categorical.py  test_circulant.py  test_periodic.py
(+267 files in other folders)
